# textcrypt

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac  index.html  params.json  run.sh
src/: Makefile.am  config.db  controller.py  crypt.py  database.py  main.py  setup.py  textcrypt.py  textcrypt.ui
